# catalyst-data

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  NOTE.md  README.md  catalyst_data_manifest.json  pyproject.toml  queries.sql  requirements-dev.txt  requirements.txt  schema.sql
.github/workflows/: tests.yml
contracts/: record_contract.json  review_contract.json
data/: entities.csv  indicators.csv  measurements.csv  sources.csv
docs/: accessibility-offline-performance.md  analysis-artifacts-reproducible-packages.md  backup-restore-recovery.md  connected-evidence-measurement-platform.md  connectors-refresh-data-operations.md  data-contract.md  erd.mmd  evidence-chain.md  export-spec.md  extension-rules.md  import-pipeline.md  indicator-governance.md  institutional-workspaces-access-governance.md  local-demo.md  methodology.md  migration-v1.0.md  observation-lineage.md  operational-hardening.md  persistent-repository.md  provenance.md  public-api-embeds-handoffs.md  query-comparison-export-studio.md  review-checklist.md  review-quality-revision.md  schema.md  source-versioning.md  units-and-methodologies.md  wordpress-plugin.md
examples/: sample_legacy_v1_0_record.json  sample_project.json
examples/analyses/: evidence_quality_analysis.json
examples/connectors/: open_metrics.json  open_metrics_connector.json
examples/imports/: measurements.csv  records.json
examples/platform/: decision_studio_component.json
examples/queries/: reviewable_records.json
notebooks/: README.md
openapi/: catalyst-data-openapi.json
outputs/: generated_brief.json  generated_brief.md  sample_catalyst_data_brief.md  sample_export.json  upgraded_legacy_record.json
python/: generate_data_brief.py
python/catalyst_data/: __init__.py  _contract.py  _record_contract.py  _version.py  analysis_artifacts.py  cli.py  connectors.py  database.py  engine.py  exporter.py  governance.py  handoff.py  importer.py  lineage.py  migrations.py  operations.py  platform.py  provenance.py  public_api.py  query_studio.py  repository.py  review.py  service.py  types.py  validation.py  workspaces.py
python/catalyst_data/migrations/: 001_core_schema.down.sql  001_core_schema.up.sql  002_persistent_repository.down.sql  002_persistent_repository.up.sql  003_sources_provenance_evidence.down.sql  003_sources_provenance_evidence.up.sql  004_indicator_units_methodology.down.sql  004_indicator_units_methodology.up.sql  008_public_api_embeds_handoffs.up.sql  (+17 more)
release/: v1.0.1.md  v1.1.0.md  v1.10.0.md  v1.11.0.md  v1.12.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.8.0.md  v1.9.0.md  v2.0.0.md
schemas/: catalyst_data_access_governance_1_0.schema.json  catalyst_data_export.schema.json  catalyst_data_handoff_1_0.schema.json  catalyst_data_indicator_governance_1_0.schema.json  catalyst_data_operational_hardening_1_0.schema.json  catalyst_data_record_1_0.schema.json
scripts/: build_release.py  check_release.py  smoke_test.py  snapshot_schema.py  sync_contract.py  sync_record_contract.py  test_browser_contract.js  test_release.sh
tests/: test_analysis_artifacts.py  test_cli.py  test_connected_platform.py  test_connector_operations.py  test_engine.py  test_evidence_chain.py  test_exporter.py  test_governance.py  test_import_pipeline.py  test_institutional_workspaces.py  test_migrations.py  test_observation_lineage.py  test_operational_hardening.py  test_public_api_handoffs.py  test_query_studio.py  test_record_contract.py  test_release_contract.py  test_repository.py  test_review_workflow.py  test_sql_contract.py
wordpress/catalyst-data-demo/: README.md  catalyst-data-demo.php
(+13 files in other folders)
