[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-data"
dynamic = ["version"]
description = "Reproducible analysis artifacts, governed connectors, public API, workspaces, review, provenance, observations, and measurements for Sustainable Catalyst"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.21"]
license = { text = "MIT" }
authors = [{ name = "Content Catalyst LLC" }]
keywords = ["evidence", "measurement", "provenance", "sustainability", "json-schema"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
catalyst-data = "catalyst_data.cli:main"
catalyst-data-brief = "catalyst_data.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.package-data]
catalyst_data = ["schemas/*.json", "migrations/*.sql"]

[tool.setuptools.dynamic]
version = { attr = "catalyst_data.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
